--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ webp = "0.2.5"
 lazy_static = "1.4.0"
 toml = "0.7.6"
 config = "0.13.3"
+base64 = "0.21.2"
+user-agent-parser = "0.3.4"
+axum = "0.6.20"
