--- a/Config.toml.example
+++ b/Config.toml.example
@@ -1,6 +1,6 @@
 root_path = "/home"
 image_quality = 75
-gravatar_cdn = "aa"
+gravatar_cdn = "https://secure.gravatar.com/avatar"
 master_domain = "aaa"
 update_circle = 2
 picture_convert_threads = 1
