--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,5 @@ user-agent-parser = "0.3.4"
 # actix-rt = "2.9.0"
 urlencoding = "2.1.3"
 tiny_http = "0.12.0"
+mime_guess = "2.0.4"
+mime = "0.3.17"
