--- a/Config.toml.example
+++ b/Config.toml.example
@@ -4,3 +4,4 @@ gravatar_cdn = "https://secure.gravatar.com/avatar"
 master_domain = "aaa"
 update_circle = 2
 picture_convert_threads = 1
+temp_path = "/tmp"
