--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ job_scheduler = "1.2.1"
 tokio = { version = "1", features = ["full"] }
 serde_json = "1.0.104"
 serde = "1.0.182"
-reqwest = { version = "0.11", features = ["stream", "rustls-tls"] }
+reqwest = { version = "0.11", features = ["stream"] }
 webp = "0.2.5"
 lazy_static = "1.4.0"
 toml = "0.8.0"
